# port-kill

./: .gitignore  Cargo.toml  LICENSE  README.md  USAGE.md  install.sh  run.sh  test_docker.sh  test_ports.sh
src/: app.rs  cli.rs  console_app.rs  lib.rs  main.rs  main_console.rs  process_monitor.rs  tray_menu.rs  types.rs
