[package]
name = "port-kill"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "port-kill"
path = "src/main.rs"

[[bin]]
name = "port-kill-console"
path = "src/main_console.rs"



[dependencies]
tray-icon = "0.10"
winit = "0.29"
nix = { version = "0.27", features = ["signal", "process"] }
crossbeam-channel = "0.5"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
